@@ -5,16 +5,20 @@ import java.util.Collections;
 import java.util.List;
 
 /**
- * Represents a deck of playing cards used in the game.
- * The deck is composed of 52 standard playing cards, including
- * all suits and ranks. The deck can be shuffled and cards can be dealt
- * from it.
+ * Represents a deck of cards for the Blackjack game.
+ * The deck is capable of shuffling and dealing cards.
+ * Once the deck is empty, a new deck is automatically created
+ * and shuffled for continued play.
  */
-
 public class Deck {
     private List<Card> cards;
 
     public Deck() {
+        createNewDeck();
+        shuffle();
+    }
+
+    private void createNewDeck() {
         cards = new ArrayList<>();
         String[] suits = {"Spades", "Hearts", "Diamonds", "Clubs"};
         String[] ranks = {"2", "3", "4", "5", "6", "7", "8", "9", "10", "J", "Q", "K", "A"};
@@ -24,14 +28,19 @@ public class Deck {
                 cards.add(new Card(suit, rank));
             }
         }
-        shuffle();
     }
 
-    public void shuffle() {
+    private void shuffle() {
         Collections.shuffle(cards);
     }
 
     public Card deal() {
-        return cards.remove(cards.size() - 1);
+        if (cards.isEmpty()) {
+            System.out.println("The deck is empty. Creating a new deck.");
+            createNewDeck();
+            shuffle();
+        }
+        return cards.removeLast();
     }
+
 }
